# hs-msgpack-persist

./: .cirrus.yml  BUILD.bazel  msgpack-binary.cabal  msgpack-persist.cabal  stack.yaml
.github/: settings.yml
.github/docker/: Dockerfile
bench/Data/: MessagePackBench.hs
src/Data/: MessagePack.hs
src/Data/MessagePack/: Get.hs  Put.hs
test/Data/: MessagePackSpec.hs  Result.hs
tools/: BUILD.bazel  msgpack-gen-sample.hs  msgpack-parser.hs
