load("@rules_haskell//haskell:defs.bzl", "haskell_library")
load("//third_party/haskell/hspec-discover:build_defs.bzl", "hspec_test")
load("//tools/project:build_defs.bzl", "project")

package(features = ["-layering_check"])

project(license = "hs-msgpack")

haskell_library(
    name = "hs-msgpack-persist",
    srcs = glob(["src/**/*.*hs"]),
    compiler_flags = ["-Wno-unused-imports"],
    src_strip_prefix = "src",
    version = "0.0.17",
    visibility = ["//visibility:public"],
    deps = [
        "//hs-msgpack-types",
        "//third_party/haskell:base",
        "//third_party/haskell:bytestring",
        "//third_party/haskell:monad-validate",
        "//third_party/haskell:persist",
        "//third_party/haskell:text",
        "//third_party/haskell:vector",
    ],
)

hspec_test(
    name = "testsuite",
    size = "small",
    compiler_flags = ["-Wno-unused-imports"],
    deps = [
        ":hs-msgpack-persist",
        "//hs-msgpack-testsuite",
        "//third_party/haskell:base",
        "//third_party/haskell:hspec",
    ],
)
