name:                 msgpack-persist
version:              0.0.17
synopsis:             A Haskell implementation of MessagePack
homepage:             http://msgpack.org/
license:              BSD3
license-file:         LICENSE
author:               Hideyuki Tanaka
maintainer:           Iphigenia Df <iphydf@gmail.com>
copyright:            Copyright (c) 2009-2016, Hideyuki Tanaka
category:             Data
stability:            Experimental
cabal-version:        >= 1.10
build-type:           Simple
description:
  A Haskell implementation of MessagePack <http://msgpack.org/>
  .
  This is a fork of msgpack-haskell <https://github.com/msgpack/msgpack-haskell>,
  since the original author is unreachable. This fork incorporates a number of
  bugfixes and is actively being developed.

source-repository head
  type:             git
  location:         https://github.com/TokTok/hs-msgpack-persist

library
  default-language: Haskell2010
  hs-source-dirs:
      src
  ghc-options:
      -Wall
      -Wno-unused-imports
  exposed-modules:
      Data.MessagePack
  other-modules:
      Data.MessagePack.Get
      Data.MessagePack.Put
  build-depends:
      base                      < 5
    , bytestring
    , monad-validate
    , msgpack-types             >= 0.3.2 && < 0.4
    , persist
    , text
    , vector

executable msgpack-gen-sample
  default-language: Haskell2010
  hs-source-dirs:
      tools
  ghc-options:
      -Wall
      -Wno-unused-imports
  main-is: msgpack-gen-sample.hs
  build-depends:
      base < 5
    , msgpack-arbitrary         >= 0.1.3 && < 0.2
    , msgpack-persist

executable msgpack-parser
  default-language: Haskell2010
  hs-source-dirs:
      tools
  ghc-options:
      -Wall
      -Wno-unused-imports
  main-is: msgpack-parser.hs
  build-depends:
      base < 5
    , msgpack-arbitrary
    , msgpack-persist

test-suite testsuite
  type: exitcode-stdio-1.0
  default-language: Haskell2010
  hs-source-dirs: test
  main-is: testsuite.hs
  other-modules:
      Data.MessagePackSpec
  ghc-options:
      -Wall
      -Wno-unused-imports
  build-depends:
      base < 5
    , hspec
    , msgpack-persist
    , msgpack-testsuite         >= 0.1.0 && < 0.2

benchmark benchmark
  type: exitcode-stdio-1.0
  default-language: Haskell2010
  hs-source-dirs: bench
  main-is: benchmark.hs
  other-modules:
      Data.MessagePack.IntBench
      Data.MessagePackBench
  ghc-options:
      -Wall
      -Wno-unused-imports
  build-depends:
      base < 5
    , QuickCheck
    , bytestring
    , criterion
    , deepseq
    , msgpack-persist
