load("@ai_formation_hazel//tools:mangling.bzl", "hazel_library")
load("@rules_haskell//haskell:defs.bzl", "haskell_binary")

package(features = ["-layering_check"])

haskell_binary(
    name = "msgpack-parser",
    srcs = ["msgpack-parser.hs"],
    compiler_flags = ["-Wno-unused-imports"],
    deps = [
        "//hs-msgpack-persist",
        hazel_library("base"),
        hazel_library("bytestring"),
        hazel_library("groom"),
    ],
)

haskell_binary(
    name = "msgpack-gen-sample",
    srcs = ["msgpack-gen-sample.hs"],
    deps = [
        "//hs-msgpack-arbitrary",
        "//hs-msgpack-persist",
        hazel_library("QuickCheck"),
        hazel_library("base"),
        hazel_library("bytestring"),
        hazel_library("quickcheck-instances"),
        hazel_library("time"),
        hazel_library("vector"),
    ],
)
