load("@rules_haskell//haskell:defs.bzl", "haskell_binary")

package(features = ["-layering_check"])

haskell_binary(
    name = "msgpack-parser",
    srcs = ["msgpack-parser.hs"],
    deps = [
        "//hs-msgpack-arbitrary",
        "//hs-msgpack-persist",
        "//third_party/haskell:base",
    ],
)

haskell_binary(
    name = "msgpack-gen-sample",
    srcs = ["msgpack-gen-sample.hs"],
    deps = [
        "//hs-msgpack-arbitrary",
        "//hs-msgpack-persist",
        "//third_party/haskell:base",
    ],
)
